--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p class= "dark-font">Coding is not my only hobby, though. In my down time I love to unwind with yoga, a book or video games. Being able to see the world and experience new ways of life is a driving force in my journey through life. I aspire to visit as many places on this planet as I possibly can.</p>
           </div>
           <div class= "item">
-            <img src= "photos/Lithuania-red-house.jpg" alt= "red house in Lithuania" class= "image enhanced">
+            <img src= "Lithuania-red-house.jpg" alt= "red house in Lithuania" class= "image enhanced">
           </div>
         </div>
       </section>
