--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class = "item">
             <h1>Hi! I'm Bridgette</h1>
             <p>I am an enthusiastic software developer looking to make my mark in the world wide web. Details are my favorite conversation topic and something I pay deep attention to.<br>
-            I am well versed in HTML, CSS and Javascript. Problem solving is a strong passion of mine. I work hard and dedicate a lot of myself to find solutions to make life easier and more efficient.</p>
+            I am well versed in HTML, CSS and Javascript. Problem solving is a strong passion of mine. I work hard and dedicate a lot of myself to finding solutions to make life easier and more efficient.</p>
           </div>
         </div>
       </section>
@@ -40,7 +40,7 @@
         <h2 id= "about">My Background</h2>
         <div class= "group">
           <div class= "item">
-            <p class= "dark-font">I entered the hospitality industry during my time in college. After graduating and dabbling in what I thought would be my future industry, I quickly learned that my dream to become a wildlife behavioral biologist was not suitable for myself. I started my search for myself and continued to grow and learn more about hospitality and picked up many personal and professional skills that developed me into the person I am today. I joined Thinkful after teaching myself the basics of coding and have evolved into a much more efficient and self driven coder.</p>
+            <p class= "dark-font">I entered the hospitality industry during my time in college. After graduating and dabbling in what I thought would be my future industry, I quickly learned that my dream to become a wildlife behavioral biologist was not suitable for myself. I started my search for who I am and continued to grow and learn more while in hospitality. I picked up many personal and professional skills that developed me into the person I am today. I joined Thinkful after teaching myself the basics of coding and have evolved into a much more efficient and self-driven coder.</p>
             <p class= "dark-font">Coding is not my only hobby, though. In my down time I love to unwind with yoga, a book or video games. Being able to see the world and experience new ways of life is a driving force in my journey through life. I aspire to visit as many places on this planet as I possibly can.</p>
           </div>
           <div class= "item">
