--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <input id "user-email" type= "text" name= "email">
 
               <label for "user-message">Message:</label>
-              <textarea id= "user-message" name= "message"></textarea>
+              <textarea id= "user-message" name= "message" maxlength="300"></textarea>
               <button type= "submit">Submit</button>
             </form>
           </div>
