--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p class= "dark-font">I entered the hospitality industry during my time in college. After graduating and dabbling in what I thought would be my future industry, I quickly learned that my dream to become a wildlife behavioral biologist was not suitable for myself. I started my search for who I am and continued to grow and learn more while in hospitality. I picked up many personal and professional skills that developed me into the person I am today. I joined Thinkful after teaching myself the basics of coding and have evolved into a much more efficient and self-driven coder.</p>
             <p class= "dark-font">Coding is not my only hobby, though. In my down time I love to unwind with yoga, a book or video games. Being able to see the world and experience new ways of life is a driving force in my journey through life. I aspire to visit as many places on this planet as I possibly can.</p>
             <p class= "dark-font">Here is a list of services I offer:</p>
-            <ul class= "dark-font"><li>Front end web design</li><li>Back end web design</li></ul>
+            <ul><li class= "dark-font">Front end web design</li><li class= "dark-font">Back end web design</li></ul>
           </div>
           <div class= "item">
             <img src= "Lithuania-red-house.jpg" alt= "red house in Lithuania" class= "image enhanced">
