--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <section>
         <div class= "group">
           <div class= "item">
-            <img> <!-- updated head shot of my face to come -->
+          <!-- updated head shot of my face to come -->
           </div>
           <div class = "item">
             <h1>Hi! I'm Bridgette</h1>
@@ -69,7 +69,7 @@
         <h2 class= "light-font" id= "contact">Connect With Me</h2>
         <div class= "group">
           <div class= "item">
-            <form action= "#" method: "POST">
+           <!-- <form action= "#" method: "POST"> -->
               <label for= "user-name">Name:</label>
               <input id= "user-name" type= "text" name= "name">
 
