--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h2 class= "light-font" id= "contact">Connect With Me</h2>
         <div class= "group">
           <div class= "item">
-           <form>
+           <form action= "process-form.js" method= "post">
               <label for="user-name">Name:</label>
               <input id="user-name" type="text" name="name">
 
