--- a/index.html
+++ b/index.html
@@ -69,17 +69,9 @@
         <h2 class= "light-font" id= "contact">Connect With Me</h2>
         <div class= "group">
           <div class= "item">
-           <form action= "script.js" method= "post">
-              <label for="user-name">Name:</label>
-              <input id="user-name" type="text" name="name">
-
-              <label for="user-email">Email:</label>
-              <input id="user-email" type="text" name="email">
-
-              <label for="user-message">Message:</label>
-              <textarea id="user-message" name="message" maxlength="300"></textarea>
-              <button type="submit">Submit</button>
-            </form>
+           <form action="https://formspree.io/xaypkyzr" method="POST">
+            <label>Email:<input type="text" name="_replyto"></label>
+            <label>Message:<textarea name="message"></textarea></label>
           </div>
           <div class= "item">
             <p>Email: <a href= "mailto:turner.bridgette@yahoo.com?subject=Developer%20inquiry.">turner.bridgette@yahoo.com</a></p>
