--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
            <form action="https://formspree.io/xaypkyzr" method="POST">
             <label>Email:<input type="text" name="_replyto"></label>
             <label>Message:<textarea name="message"></textarea></label>
+            <button type="submit">Send</button>
+           </form>
           </div>
           <div class= "item">
             <p>Email: <a href= "mailto:turner.bridgette@yahoo.com?subject=Developer%20inquiry.">turner.bridgette@yahoo.com</a></p>
@@ -85,10 +87,6 @@
     <!-- footer -->
     <footer>
       <p>Web architect: Bridgette Turner</p></footer>
-    <script src="script.js">
-      function submitform(){
-        document.myform.submit();
-      }
-    </script>
+    <script src="script.js"></script>
   </body>
 </html> 
