--- a/index.html
+++ b/index.html
@@ -87,6 +87,6 @@
     <!-- footer -->
     <footer>
       <p>Web architect: Bridgette Turner</p></footer>
-    <script src="script.js"></script>
+    <!--<script src="script.js"></script> -->
   </body>
 </html> 
